Осталось 1024 и 768 для всего, кроме попапа

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -5,7 +5,7 @@
   width: 20px;
   height: 20px;
   position: absolute;
-  top: -30px;
+  top: -36px;
   right: 0;
 }
 
@@ -25,4 +25,53 @@
   border: 1px solid #FFFFFF;
   top: 0;
   transform: rotate(-45deg);
+}
+
+@media screen and (min-width: 768px) {
+  .popup__close-button {
+    width: 24px;
+    height: 24px;
+  }
+
+  .popup__close-button::before {
+    height: 24px;
+  }
+
+  .popup__close-button::after {
+    height: 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .popup__close-button {
+    width: 26px;
+    height: 26px;
+    right: -32px;
+    top: -32px;
+  }
+
+  .popup__close-button::before {
+    height: 26px;
+  }
+
+  .popup__close-button::after {
+    height: 26px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .popup__close-button {
+    width: 32px;
+    height: 32px;
+    right: -40px;
+    top: -40px;
+  }
+
+  .popup__close-button::before {
+    height: 32px;
+  }
+
+  .popup__close-button::after {
+    height: 32px;
+  }
 }
