--- a/blocks/elements/__attributes/elements__attributes.css
+++ b/blocks/elements/__attributes/elements__attributes.css
@@ -12,3 +12,19 @@
   color: black;
   border-radius: 0 0 8px 8px;
 }
+
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+  .elements__attributes {
+
+  }
+
+}
