--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -4,3 +4,19 @@
   width: 100%;
   border-radius: 8px 8px 0 0;
 }
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+  .elements__image {
+
+
+  }
+
+}
