--- a/blocks/elements/__item/elements__item.css
+++ b/blocks/elements/__item/elements__item.css
@@ -8,3 +8,19 @@
 .elements__item:last-of-type{
   margin-bottom: 48px;
 }
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+  .elements__item {
+    margin: 0;
+
+  }
+
+}
