--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,3 +1,21 @@
 .elements {
   margin: 0 19px 48px;
 }
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+  .elements {
+    margin: 0 200px 66px;
+    display: grid;
+    grid-template-columns: repeat(3, 282px);
+    grid-template-rows: repeat(2, 362px);
+    gap: 20px 17px;
+  }
+}
