--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,18 @@
 .footer {
   margin: 0 19px 36px;
 }
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    margin: 0 762px 60px 200px;
+  }
+}
+
