--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -8,3 +8,21 @@
   position: relative;
 
 }
+
+@media screen and (min-width: 768px) {
+  .popup__container {
+    min-width: 320px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .popup__container {
+    min-width: 400px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .popup__container {
+    min-width: 430px;
+  }
+}
