--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -5,3 +5,21 @@
   margin: 0 22px 25px;
 }
 
+@media screen and (min-width: 768px) {
+  .popup__form {
+    margin: 0 24px 30px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .popup__form {
+    margin: 0 30px 48px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .popup__form {
+    margin: 0 36px 48px;
+  }
+}
+
