--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -6,9 +6,31 @@
   border-radius: 2px;
   min-height: 46px;
   margin: 45px 0 0;
+  font-size: 14px;
+  line-height: 17px;
 }
 
 .popup__save-button:hover {
   background: rgba(0,0,0,.8);
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+  .popup__save-button {
+    min-height: 48px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .popup__save-button {
+    min-height: 50px;
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
