--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,6 @@
 .profile__add-button {
   outline: 0;
+  padding: 0;
   border: 1px solid white;
   background-color: black;
   background: url(/images/profile/add-button.svg) no-repeat 50%;
@@ -7,4 +8,19 @@
   min-height: 52px;
 }
 
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+  .profile__add-button {
+    min-height: 50px;
+    width: 150px;
+  }
+}
 
