--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,10 +1,26 @@
 .profile__edit-button {
   outline: 0;
   border: 0;
-  margin-left: 10px;
+  padding: 0;
   background-image: url(/images/profile/Edit_button.svg);
-  background-repeat: no-repeat;
+  background-repeat: round;
   background-color: rgba(0, 0, 0, 0.25);
   width: 18px;
   height: 18px;
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+  .profile__edit-button {
+    width: 24px;
+    height: 24px;
+  }
 }
