--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,7 +2,6 @@
   color: #FFFFFF;
   width: 100%;
   margin: 26px 0 36px;
-  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -16,6 +15,6 @@
 @media screen and (min-width: 1280px) {
   .profile__info {
     margin: 0 244px 0 30px;
-    text-align: left;
+    width: 336px;
   }
 }
