--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,21 +1,39 @@
 .elements {
   margin: 0 19px 48px;
+  display: grid;
+  grid-template-rows: repeat(1, 361px);
+  grid-template-columns: repeat(1, 282px);
+  justify-content: center;
+  row-gap: 20px;
+  grid-auto-flow: row;
 }
 
 @media screen and (min-width: 768px) {
+  .elements {
+    margin: 0 75px 48px;
+    justify-content: space-between;
+    display: grid;
+    grid-template-rows: repeat(3, 361px);
+    grid-template-columns: repeat(2, 282px);
+    gap: 20px 0;
+  }
 
 }
 
 @media screen and (min-width: 1024px) {
-
+  .elements {
+    margin: 0 75px 54px;
+    gap: 20px 15px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .elements {
     margin: 0 200px 66px;
-    display: grid;
-    grid-template-columns: repeat(3, 282px);
-    grid-template-rows: repeat(2, 362px);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 20px 17px;
   }
 }
