--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,16 +3,20 @@
 }
 
 @media screen and (min-width: 768px) {
-
+  .footer {
+    margin: 0 75px 36px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-
+  .footer {
+    margin: 0 75px 45px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .footer {
-    margin: 0 762px 60px 200px;
+    margin: 0 0 60px 200px;
   }
 }
 
