--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,4 +1,29 @@
 .header__logo {
   display: block;
+  width: 103.74px;
+  height: 24.4px;
   margin-left: 27px;
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-left: 19px;
+    width: 114px;
+    height: 26px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header__logo {
+    width: 122px;
+    height: 28px;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header__logo{
+    width: 142px;
+    height: 33px;
+  }
 }
