--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,11 +8,15 @@
 
 
 @media screen and (min-width: 768px) {
-
+  .header {
+    margin: 28px 75px 40px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-
+  .header {
+    margin: 45px 75px 40px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
