--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,20 +7,32 @@
   background-color: rgba(0, 0, 0, 0.25);
   width: 18px;
   height: 18px;
-  margin-left: 10px;
+  grid-area: edit-button;
+  margin: 8px 18px 0 0;
 }
 
 @media screen and (min-width: 768px) {
-
+  .profile__edit-button {
+    width: 20px;
+    height: 20px;
+    margin: 8px 0 0;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-
+  .profile__edit-button {
+    width: 22px;
+    height: 22px;
+    margin-left: 20px;
+    margin: 15px 0 0 18px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .profile__edit-button {
     width: 24px;
     height: 24px;
+    margin-left: 20px;
+    margin: 15px 0 0 18px;
   }
 }
