--- a/blocks/profile/__info/_description/profile__info_description.css
+++ b/blocks/profile/__info/_description/profile__info_description.css
@@ -4,23 +4,29 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  text-align: center;
+  grid-area: description;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 
 @media screen and (min-width: 768px) {
-
+  .profile__info_description {
+    font-size: 15px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-
+  .profile__info_description {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .profile__info_description {
-    font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    text-align: left;
   }
 }
