--- a/blocks/profile/__info/_name/profile__info_name.css
+++ b/blocks/profile/__info/_name/profile__info_name.css
@@ -1,23 +1,34 @@
 .profile__info_name {
-  margin: 0 0 14px 46px;
+  margin: 0 0 14px;
   font-style: normal;
   font-weight: 500;
   font-size: 27px;
   line-height: 33px;
+  grid-area: name;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
-
+  .profile__info_name {
+    margin: 0 0 16px;
+    font-size: 32px;
+    line-height: 38px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-
+  .profile__info_name {
+    margin: 0 0 16px;
+    font-size: 37px;
+    line-height: 43px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .profile__info_name {
     margin: 0 0 16px;
-    font-weight: 500;
     font-size: 42px;
     line-height: 48px;
   }
