--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,19 +2,38 @@
   color: #FFFFFF;
   width: 100%;
   margin: 26px 0 36px;
+  grid-area: info;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 37px;
+  grid-template-rows: repeat(2 minmax(min-content max-content));
+  justify-content: center;
+  grid-template-areas:
+  'name edit-button'
+  'description .';
 }
 
 @media screen and (min-width: 768px) {
-
+  .profile__info {
+    text-align: left;
+    grid-template-columns: minmax(min-content max-content) 1fr;
+    justify-content: flex-start;
+    grid-template-rows: repeat(2 minmax(min-content max-content));
+  }
 }
 
 @media screen and (min-width: 1024px) {
-
+  .profile__info {
+    grid-template-columns: 50% 1fr;
+    justify-content: flex-start;
+    grid-template-rows: repeat(2 minmax(min-content max-content));
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .profile__info {
     margin: 0 244px 0 30px;
     width: 336px;
+    grid-template-columns: 1fr min-content;
   }
 }
