--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,19 +6,33 @@
 }
 
 @media screen and (min-width: 768px) {
-
+  .profile {
+    margin: 0 75px 36px;
+    display: grid;
+    grid-template-rows: repeat(2 minmax(min-content max-content));
+    row-gap: 36px;
+    grid-template-columns: 120px 1fr;
+    column-gap: 18px;
+    grid-template-areas:
+    'avatar info'
+    'add-button add-button';
+  }
 }
 
 @media screen and (min-width: 1024px) {
-
+  .profile {
+    margin: 0 75px 50px;
+    grid-template-rows: 1fr;
+    grid-template-columns: 120px 1fr 150px;
+    gap: 0 30px;
+    grid-template-areas:
+    'avatar info add-button';
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .profile {
     margin: 0 200px 50px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+    gap: 0 0;
   }
 }
