--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,10 +1,10 @@
 .elements {
   margin: 0 19px 48px;
   display: grid;
-  grid-template-rows: repeat(1, 361px);
-  grid-template-columns: repeat(1, 282px);
+  grid-template-rows: repeat(auto-fill, 361px);
+  grid-template-columns: repeat(auto-fill, 282px);
   justify-content: center;
-  row-gap: 20px;
+  gap: 20px 15px;
   grid-auto-flow: row;
 }
 
@@ -13,8 +13,9 @@
     margin: 0 75px 48px;
     justify-content: space-between;
     display: grid;
-    grid-template-rows: repeat(3, 361px);
-    grid-template-columns: repeat(2, 282px);
+    grid-template-rows: repeat(auto-fill, 361px);
+    grid-template-columns: repeat(auto-fill, 282px);
+    grid-auto-flow: auto;
     gap: 20px 0;
   }
 
@@ -24,16 +25,14 @@
   .elements {
     margin: 0 75px 54px;
     gap: 20px 15px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 361px);
+    grid-template-columns: repeat(3, 282px);
   }
 }
 
 @media screen and (min-width: 1280px) {
   .elements {
     margin: 0 200px 66px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
     gap: 20px 17px;
   }
 }
