--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,11 +1,10 @@
 .elements {
   margin: 0 19px 48px;
   display: grid;
-  grid-template-rows: repeat(auto-fill, 361px);
-  grid-template-columns: repeat(auto-fill, 282px);
+  grid-template-rows: repeat(1, 361px);
+  grid-template-columns: repeat(1, 282px);
   justify-content: center;
-  gap: 20px 15px;
-  grid-auto-flow: row;
+  gap: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -13,9 +12,8 @@
     margin: 0 75px 48px;
     justify-content: space-between;
     display: grid;
-    grid-template-rows: repeat(auto-fill, 361px);
-    grid-template-columns: repeat(auto-fill, 282px);
-    grid-auto-flow: auto;
+    grid-template-rows: repeat(3, 361px);
+    grid-template-columns: repeat(2, 282px);
     gap: 20px 0;
   }
 
