--- a/blocks/elements/__button-like/_state-active/elements__button-like_state-active.css
+++ b/blocks/elements/__button-like/_state-active/elements__button-like_state-active.css
@@ -1,3 +1,3 @@
 .elements__button-like_state-active {
-  background: url(/images/elements/Button-like-active.svg) no-repeat;
+  background: url(../../../../images/elements/Button-like-active.svg) no-repeat;
 }
