--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,7 +2,7 @@
   outline: 0;
   border: 0;
   padding: 0;
-  background-image: url(/images/profile/Edit_button.svg);
+  background-image: url(../../../images/profile/Edit_button.svg);
   background-repeat: round;
   background-color: rgba(0, 0, 0, 0.25);
   width: 18px;
