--- a/blocks/profile/__name/profile__info_type-name.css
+++ b/blocks/profile/__name/profile__info_type-name.css
@@ -1,4 +1,4 @@
-.profile__info_type-name {
+.profile__name {
   margin: 0 0 14px;
   font-style: normal;
   font-weight: 500;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .profile__info_type-name {
+  .profile__name {
     margin: 0 0 16px;
     font-size: 32px;
     line-height: 38px;
@@ -19,7 +19,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .profile__info_type-name {
+  .profile__name {
     margin: 0 0 16px;
     font-size: 37px;
     line-height: 43px;
@@ -27,7 +27,7 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .profile__info_type-name {
+  .profile__name {
     margin: 0 0 16px;
     font-size: 42px;
     line-height: 48px;
