После 1 ревью, учтены все ошибки

--- a/blocks/elements/__button-like/elements__button-like.css
+++ b/blocks/elements/__button-like/elements__button-like.css
@@ -12,3 +12,6 @@
   cursor: pointer;
 }
 
+.elements__button-like:active {
+  background: url(../../../../images/elements/Button-like-active.svg) no-repeat;
+}
