--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,7 @@
 @import url(../blocks/root/root.css);
 @import url(../blocks/container/container.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/link/link.css);
+@import url(../blocks/button/button.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
