--- a/blocks/elements/__item/elements__item.css
+++ b/blocks/elements/__item/elements__item.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+  position: relative;
 }
 
 @media screen and (min-width: 768px) {
