--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -1,7 +1,8 @@
 .elements__image {
   display: block;
   object-fit: cover;
-  width: 100%;
+  width: 282px;
+  height: 282px;
   border-radius: 8px 8px 0 0;
 }
 
