--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -4,20 +4,6 @@
   width: 282px;
   height: 282px;
   border-radius: 8px 8px 0 0;
+  cursor: pointer;
 }
 
-@media screen and (min-width: 768px) {
-
-}
-
-@media screen and (min-width: 1024px) {
-
-}
-
-@media screen and (min-width: 1280px) {
-  .elements__image {
-
-
-  }
-
-}
