--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
-  text-align: center;
-  margin: 25px 22px 75px;
+  text-align: left;
+  margin: 25px 0 75px;
   font-weight: 900;
   font-size: 18px;
   line-height: 22px;
@@ -10,8 +10,7 @@
   .popup__title {
     font-size: 20px;
     line-height: 24px;
-    margin: 25px 24px 65px;
-    text-align: left;
+    margin: 25px 0 65px;
   }
 }
 
@@ -19,8 +18,7 @@
   .popup__title {
     font-size: 22px;
     line-height: 26px;
-    text-align: left;
-    margin: 28px 30px 62px;
+    margin: 28px 0 62px;
   }
 }
 
@@ -29,7 +27,7 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    margin: 34px 64px 54px 36px;
+    margin: 34px 0 36px;
   }
 }
 
