--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,6 +5,9 @@
   padding: 0;
   width: 100%;
   height: 100%;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   bottom: 0;
