--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,8 @@
 .popup {
-  display: none;
   position: fixed;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  display: flex;
   align-content: center;
   flex-wrap: wrap;
   justify-content: center;
@@ -14,5 +12,8 @@
   left: 0;
   right: 0;
   z-index: 100;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .4s ease-in-out;
 }
 
