--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -7,24 +7,24 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 22px 25px;
+  padding: 25px 22px;
 }
 
 @media screen and (min-width: 768px) {
   .popup__form {
-    padding: 0 24px 30px;
+    padding: 27px 24px 30px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .popup__form {
-    padding: 0 30px 48px;
+    padding: 30px 30px 33px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .popup__form {
-    padding: 0 36px 48px;
+    padding: 34px 36px 37px;
   }
 }
 
