--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
   text-align: left;
-  margin: 25px 0 75px;
+  margin: 0 0 75px;
   font-weight: 900;
   font-size: 18px;
   line-height: 22px;
@@ -10,7 +10,7 @@
   .popup__title {
     font-size: 20px;
     line-height: 24px;
-    margin: 25px 0 65px;
+    margin: 0 0 65px;
   }
 }
 
@@ -18,7 +18,7 @@
   .popup__title {
     font-size: 22px;
     line-height: 26px;
-    margin: 28px 0 62px;
+    margin: 0 0 62px;
   }
 }
 
@@ -27,7 +27,7 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    margin: 34px 0 36px;
+    margin: 0 0 54px;
   }
 }
 
