--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -10,6 +10,13 @@
   line-height: 17px;
 }
 
+.popup__save-button:disabled {
+  border: 1px solid rgba(0,0,0, .2);
+  color: rgba(0,0,0, .2);
+  background: #fff;
+  cursor: default;
+}
+
 
 @media screen and (min-width: 768px) {
 
