--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,8 +5,10 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/button/button.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/profile/__card/profile__card.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__description/profile__info_type-description.css);
 @import url(../blocks/profile/__name/profile__info_type-name.css);
@@ -18,6 +20,8 @@
 @import url(../blocks/elements/__trash/elements__trash.css);
 @import url(../blocks/elements/__attributes/elements__attributes.css);
 @import url(../blocks/elements/__title/elements__title.css);
+@import url(../blocks/elements/__like-container/elements__like-container.css);
+@import url(../blocks/elements/__like-counter/elements__like-counter.css);
 @import url(../blocks/elements/__button-like/elements__button-like.css);
 @import url(../blocks/elements/__button-like/_state/elements__button-like_state-active.css);
 @import url(../blocks/footer/footer.css);
